--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/pic.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -68,8 +68,8 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<h1><span>Krysel April Tiempo</span></h1>
+							<h3><span>BS Information Technology | University of Science and Technology of Southern Philippines</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -95,11 +95,11 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Krysel April I. Tiempo</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">09051427482</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">tiempo.kryselapril@gmail.com</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">E&E Aparment, Macajalar, Camaman-an CDOC</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
